--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -19,7 +19,7 @@
   </div>
 <br />
   <div class="form-actions">
-    <%= f.submit 'Sign up', class: 'btn btn-primary' %>
+    <%= f.submit 'Create', class: 'btn btn-primary' %>
   </div>
 <% end %>
 <br />
