--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -9,6 +9,18 @@
     <% end %>
   </div>
 
+<% if place.comments.present? %>
+<div class="col-12">
+  <blockquote>
+    <% if place.comments.last.humanized_rating.present? %>
+      <b><%= place.comments.last.humanized_rating %></b> -
+    <% end %>
+    <%= place.comments.last.message %>
+    <small><%= place.comments.last.user.email %></small>
+  </blockquote>
+</div>
+<% end %>
+
 <% end %>
 
 <%= will_paginate @places %>
