--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,5 +1,8 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
+    <% if place.photos.present? %>
+      <%= image_tag place.photos.first.picture.url %>
+    <%end%>
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
     <p><%= place.description %></p><br />
@@ -9,18 +12,16 @@
     <% end %>
   </div>
 
-<% if place.comments.present? %>
-<div class="col-12">
-  <blockquote>
-    <% if place.comments.last.humanized_rating.present? %>
-      <b><%= place.comments.last.humanized_rating %></b> -
-    <% end %>
-    <%= place.comments.last.message %>
-    <small><%= place.comments.last.user.email %></small>
-  </blockquote>
-</div>
+  <% if place.comments.present? %>
+    <div class="col-12">
+      <blockquote>
+        <% if place.comments.last.humanized_rating.present? %>
+          <b><%= place.comments.last.humanized_rating %></b> -
+        <% end %>
+        <%= place.comments.last.message %>
+        <small><%= place.comments.last.user.email %></small>
+      </blockquote>
+    </div>
+  <% end %>
 <% end %>
-
-<% end %>
-
 <%= will_paginate @places %>
