--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -96,3 +96,11 @@ blockquote p {
 .carousel-item-prev {
   display: block;
 }
+
+.img_preview {
+  height: 100px
+}
+
+.picture {
+  height: 200px
+}
