--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -30,7 +30,7 @@
 <% @places.each do |place| %>
   <div class="booyah-box col-10 offset-1">
     <% if place.photos.present? %>
-      <%= image_tag place.photos.first.picture.url %>
+      <%= image_tag(place.photos.first.picture.url, :class => "picture")%>
     <%end%>
     <h1><%= link_to place.name, place_path(place) %></h1><br />
     <i><%= place.address %></i><br /><br />
