--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -56,7 +56,7 @@
             <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
               <div class="modal-body">
                 <% @place.photos.each do |photo| %>
-                  <%= image_tag photo.picture.url %> 
+                  <%= image_tag(photo.picture.url, :class => "img_preview")%> 
                   <%= photo.caption %>
                 <% end %>
               </div>
